# spis-voice-mvp

./: .gitattributes  .gitignore  gradle.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/vosk-model-small-pl-0.22/am/: final.mdl
app/src/main/assets/models/vosk-model-small-pl-0.22/graph/: Gr.fst  HCLr.fst
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/example/myapplication/: AudioRecorder.kt  CatalogStorage.kt  MainActivity.kt  Models.kt  ProjectStorage.kt  SpisScreen.kt
app/src/main/java/com/example/myapplication/parsing/: BasicTokenProvider.kt  CodeModeNormalizer.kt  CommandRouter.kt  InventoryParser.kt  Normalizer.kt  ParsingTokens.kt  SpokenNumberParser.kt  Tokenizer.kt  VoiceCommandParser.kt
app/src/main/java/com/example/myapplication/vosk/: VoskAudioConverter.kt  VoskModelProvider.kt  VoskTranscriber.kt  VoskTranscriptionManager.kt
app/src/main/java/com/example/myapplication/whisper/: WhisperAudioConverter.kt  WhisperEngine.kt  WhisperModelProvider.kt  WhisperTranscriber.kt
app/src/test/java/com/example/myapplication/parsing/: CodeModeNormalizerTest.kt  CommandRouterTest.kt  InventoryParserTest.kt
gradle/wrapper/: gradle-wrapper.properties
